[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Zac Ecob <21zecob@covenant.nsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version =  "0.8.4", features=["small_rng"]}
nix = "0.22.0"
rustc-hash = "1.1.0"
clap = { version = "3.1.18", features = ["derive"]}
